recieving notifications working

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 Send data: <input type="text" name="data" id="data_field">
                 <input type="submit" value="Submit" onclick="sendData(-1)"><br>
                 <input type="submit" value="Power" onclick="sendData(1)"><br>
-                <input type="submit" value="Vol Up" onclick="sendData(2)"><br>
-                <input type="submit" value="Vol Down" onclick="sendData(3)">
+                <input type="submit" value="Channel Up" onclick="sendData(2)"><br>
+                <input type="submit" value="Channel Down" onclick="sendData(3)">
             </div>
 
 
